crates/keron-lang/tests/corpus/errors/parse/for_no_body.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found end of input expected any, '#', '(', '*', '/', '+', '-', '=', '!', '<', '>', or '{'
  --> 3:1
  |
3 | 
  | ^
